NetBSD Problem Report #50240

From www@NetBSD.org  Mon Sep 14 05:14:15 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 41E16A6553
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 14 Sep 2015 05:14:15 +0000 (UTC)
Message-Id: <20150914051414.1A193A6562@mollari.NetBSD.org>
Date: Mon, 14 Sep 2015 05:14:14 +0000 (UTC)
From: ozaki-r@iij.ad.jp
Reply-To: ozaki-r@iij.ad.jp
To: gnats-bugs@NetBSD.org
Subject: Changing net.inet6.icmp6.redirtimeout doesn't work
X-Send-Pr-Version: www-1.0

>Number:         50240
>Category:       kern
>Synopsis:       Changing net.inet6.icmp6.redirtimeout doesn't work
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Sep 14 05:15:00 +0000 2015
>Closed-Date:    Mon Nov 16 05:08:52 +0000 2015
>Last-Modified:  Mon Nov 16 05:08:52 +0000 2015
>Originator:     Ryota Ozaki
>Release:        -current
>Organization:
>Environment:
NetBSD rangeley 7.99.21 NetBSD 7.99.21 (RANGELEY) #33: Thu Sep 10 09:15:06 JST 2015  ozaki-r@rangeley:(hidden) amd64
>Description:
Changing net.inet6.icmp6.redirtimeout doesn't affect actual timeout (expiration time)
of routes created by icmp6 redirect. It's because sysctl updates icmp6_redirtimeout
variable, but doesn't update icmp6_redirect_timeout_q that is the timer routine of
the timeout feature.

Reported by s-yamaguchi@IIJ
>How-To-Repeat:
See upcoming ATF tests for icmp6 redirect.
>Fix:
We need to update icmp6_redirect_timeout_q when updating icmp6_redirtimeout
as well as sysctl_net_inet_icmp_redirtimeout does for IPv4 icmp redirect.

>Release-Note:

>Audit-Trail:
From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50240 CVS commit: src
Date: Mon, 14 Sep 2015 05:22:56 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Sep 14 05:22:56 UTC 2015

 Modified Files:
 	src/distrib/sets/lists/tests: mi
 	src/tests/net/icmp: Makefile
 Added Files:
 	src/tests/net/icmp: t_icmp6_redirect.sh

 Log Message:
 Add tests for IPv6 ICMP redirect

 Note that tests for redirect timeout doesn't work for now due to
 PR kern/50240.

 From s-yamaguchi@IIJ (with some fixes and tweaks by ozaki-r)


 To generate a diff of this commit:
 cvs rdiff -u -r1.644 -r1.645 src/distrib/sets/lists/tests/mi
 cvs rdiff -u -r1.5 -r1.6 src/tests/net/icmp/Makefile
 cvs rdiff -u -r0 -r1.1 src/tests/net/icmp/t_icmp6_redirect.sh

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50240 CVS commit: src/sys/netinet6
Date: Mon, 14 Sep 2015 05:34:28 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Sep 14 05:34:28 UTC 2015

 Modified Files:
 	src/sys/netinet6: icmp6.c

 Log Message:
 Update icmp6_redirect_timeout_q when changing net.inet6.icmp6.redirtimeout

 We have to update icmp6_redirect_timeout_q as well as icmp6_redirtimeout
 when changing net.inet6.icmp6.redirtimeout via sysctl. The updating logic
 is copied from sysctl_net_inet_icmp_redirtimeout.

 This change is from s-yamaguchi@IIJ (with KNF by ozaki-r) and fixes
 PR kern/50240.


 To generate a diff of this commit:
 cvs rdiff -u -r1.176 -r1.177 src/sys/netinet6/icmp6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Wed, 16 Sep 2015 08:33:00 +0000
State-Changed-Why:
pullup-6 #1327 and pullup-7 #982


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50240 CVS commit: [netbsd-7] src/sys/netinet6
Date: Thu, 5 Nov 2015 20:36:03 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Thu Nov  5 20:36:03 UTC 2015

 Modified Files:
 	src/sys/netinet6 [netbsd-7]: icmp6.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #982):
 	sys/netinet6/icmp6.c: revision 1.177
 Update icmp6_redirect_timeout_q when changing net.inet6.icmp6.redirtimeout
 We have to update icmp6_redirect_timeout_q as well as icmp6_redirtimeout
 when changing net.inet6.icmp6.redirtimeout via sysctl. The updating logic
 is copied from sysctl_net_inet_icmp_redirtimeout.
 This change is from s-yamaguchi@IIJ (with KNF by ozaki-r) and fixes
 PR kern/50240.


 To generate a diff of this commit:
 cvs rdiff -u -r1.169 -r1.169.2.1 src/sys/netinet6/icmp6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Manuel Bouyer" <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50240 CVS commit: [netbsd-6] src/sys/netinet6
Date: Sun, 15 Nov 2015 17:49:32 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Sun Nov 15 17:49:31 UTC 2015

 Modified Files:
 	src/sys/netinet6 [netbsd-6]: icmp6.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1327):
 	sys/netinet6/icmp6.c: revision 1.177
 Update icmp6_redirect_timeout_q when changing net.inet6.icmp6.redirtimeout
 We have to update icmp6_redirect_timeout_q as well as icmp6_redirtimeout
 when changing net.inet6.icmp6.redirtimeout via sysctl. The updating logic
 is copied from sysctl_net_inet_icmp_redirtimeout.
 This change is from s-yamaguchi@IIJ (with KNF by ozaki-r) and fixes
 PR kern/50240.


 To generate a diff of this commit:
 cvs rdiff -u -r1.159.2.1 -r1.159.2.2 src/sys/netinet6/icmp6.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Mon, 16 Nov 2015 05:08:52 +0000
State-Changed-Why:
pulled up


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.